<resources>
    <string name="app_name" translatable="false">LATE</string>
    <string name="select_the_meeting_duration">Meeting duration</string>
    <string name="play_icon" translatable="false">Play icon</string>
    <string name="info_icon" translatable="false">Info icon</string>
    <string name="settings_icon" translatable="false">Settings icon</string>
    <string name="timer_circle" translatable="false">Timer circle</string>
    <string name="preference_file_key" translatable="false">late_timer_shared_file</string>
    <string name="timer_duration" translatable="false">timer_duration</string>
    <string name="timer_start_timestamp" translatable="false">timer_start_timestamp</string>
    <string name="select_reminders_title">Select reminder periods</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Okay</string>
    <string name="mins_5_left">5 minutes left for the next meeting</string>
    <string name="mins_10_left">10 minutes left for the next meeting</string>
    <string name="mins_15_left">15 minutes left for the next meeting</string>
    <string name="mins_20_left">20 minutes left for the next meeting</string>
    <string name="mins_30_left">30 minutes left for the next meeting</string>
    <string name="mins_60_left">60 minutes left for the next meeting</string>
    <string name="mins_0_left">It\'s time for the next meeting</string>
    <string name="mins_5">5 minutes</string>
    <string name="mins_10">10 minutes</string>
    <string name="mins_15">15 minutes</string>
    <string name="mins_20">20 minutes</string>
    <string name="mins_30">30 minutes</string>
    <string name="mins_60">60 minutes</string>
    <string name="mins_0">At the end</string>
    <string name="display_language" translatable="false">display_language</string>
    <string name="is_funny_sound" translatable="false">is_funny_sound</string>
    <string name="sound_type" translatable="false">sound_type</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="current_language">English</string>
    <string name="sound">Sound</string>
    <string name="male">Male</string>
    <string name="select_language">Select language</string>
    <string name="edit_icon" translatable="false">Edit icon</string>
    <string name="female">Female</string>
    <string name="male_fun_1">Мужской + Фильмы 1</string>
    <string name="male_fun_2">Мужской + Фильмы 2</string>
    <string name="female_fun_1">Женский + Фильмы 1</string>
    <string name="female_fun_2">Женский + Фильмы 2</string>
    <string name="select_sound">Select sound</string>
    <string name="guidelines_desc">
        Welcome to LATE! \
\
First thing that you will see when you open an application is a timer that can be set for your meetings.\
In order to set your timer we provide you with the following instructions:\
\
VOICE NOTIFICATION \
\
Timer notification of our application functions in two languages. \
•    English\
•    Russian\
\
Each language has male and female versions of voice overs for you to be notified.\
Additionally, if you select Russian language, we offer some funny phrases from Old Russian movies with their original voices.\
To test the voices, please, press the “Settings” button in the upper right corner and choose the language and configuration in which your application will work. Then, press the “Done” button to complete your voice configuration.\
\
MEETING DURATION:\
\
For setting the duration of your meeting, you should press on either “Play” button or bold Zero. As a result, “Meeting duration” configuration will appear on the screen. Please, bear in mind that the maximum duration time that can be set is 1 hour 55 minutes. After you decide the duration, tap on the “Select” button for completing the configuration.\
\
REMINDER PERIODS:\
\
After selecting the meeting duration, you need to activate the periods to remind you how much time is left until the end of your meeting (your next meeting). The duration of periods are:\
\
> 0 minutes\
> 5 minutes\
> 10 minutes\
> 15 minutes\
> 20 minutes\
> 30 minutes\
> 35 minutes\
> 40 minutes\
> 45 minutes\
> 50 minutes\
> 55 minutes
    </string>
    <string name="guidelines">Guidelines</string>
    <string name="hour">Hour</string>
    <string name="minutes">Minutes</string>
    <string name="select">Select</string>
    <string name="warning_min_time">The timer should be set more than 5 minutes to start</string>
    <string name="custom">Custom</string>
    <string name="custom_sound">Custom sound</string>
    <string name="select_from_media">Select from media</string>
    <string name="record_audio">Record audio</string>
    <string name="you_don_t_have_proper_permission">You don\'t have proper permission</string>
    <string name="warning_no_permission">You need to enable notifications to receive alerts</string>
    <string name="error_playing_sound">Unable to play the sound</string>

    <string-array name="hours_array" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="minutes_array" translatable="false">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
</resources>
