<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/bg_transparent_red"
        android:orientation="vertical"
        android:padding="@dimen/normal_margin">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_black"
            android:text="@string/settings"
            android:textColor="@color/colorWhite"
            android:textSize="24sp" />

        <RelativeLayout
            android:id="@+id/language_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin">

            <TextView
                android:id="@+id/language_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="@string/language"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ic_language_edit"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_edit_white_24dp"
                android:contentDescription="@string/edit_icon" />

            <TextView
                android:id="@+id/language_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_toStartOf="@id/ic_language_edit"
                android:layout_toEndOf="@id/language_title"
                android:fontFamily="@font/lato"
                android:text="@string/current_language"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sound_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin">

            <TextView
                android:id="@+id/sound_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="@string/sound"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ic_sound_edit"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_edit_white_24dp"
                android:contentDescription="@string/edit_icon" />

            <TextView
                android:id="@+id/sound_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_toStartOf="@id/ic_sound_edit"
                android:layout_toEndOf="@id/sound_title"
                android:fontFamily="@font/lato"
                android:text="@string/male"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>
</layout>
