<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/normal_margin"
    android:background="@drawable/bg_transparent_red"
    android:padding="@dimen/normal_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_black"
        android:text="@string/guidelines"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_submit"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/guidelines_desc"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </ScrollView>
</RelativeLayout>