<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/normal_margin"
    android:background="@drawable/bg_transparent_red"
    android:orientation="vertical"
    android:padding="@dimen/normal_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_black"
        android:text="@string/select_the_meeting_duration"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:orientation="horizontal"
        android:padding="@dimen/medium_margin"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_margin"
                android:fontFamily="@font/lato_bold"
                android:text="@string/hour"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:padding="@dimen/medium_margin"
                android:text="@string/hour"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_margin"
                android:fontFamily="@font/lato_bold"
                android:text="@string/minutes"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:padding="@dimen/medium_margin"
                android:text="@string/hour"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/select"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

</LinearLayout>