<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:background="@drawable/bg_rounded_white">

            <TextView
                android:id="@+id/btn_pick_media"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:text="@string/select_from_media"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:background="@drawable/bg_rounded_white">

            <TextView
                android:id="@+id/btn_record_sound"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:text="@string/record_audio"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_margin="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/colorGray"
            android:textSize="20sp" />
    </LinearLayout>
</layout>
